# CoLiNN

./: config.yaml  pyproject.toml
configs/: basic_config.toml
notebooks/: Training.ipynb
src/colinn/: main.py  preprocessing.py
