[project]
name = "CoLiNN"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alexey Orlov", email = "data2scale@gmail.com"},
]
dependencies = [
    "jupyterlab>=4.2.5",
    "wandb>=0.18.1",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
    "lightning>=2.4.0",
    "torch-geometric>=2.6.0",
    "safetensors>=0.4.5",
    "epam-indigo>=1.23.0",
    "mendeleev>=0.17.0",
    "scipy>=1.14.1",
    "toml>=0.10.2",
    "adabelief-pytorch>=0.2.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "CoLiNN @ file:///${PROJECT_ROOT}/",
]
